# any_tree

./: .gitignore  CMakeLists.txt  README.md  meson.build
example/: CMakeLists.txt  demo.cpp  meson.build
include/: any_tree.hpp
include/any_tree/: implementation.hpp  node.hpp  traits.hpp  visitor.hpp
